--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -101,7 +101,7 @@
                                             _ => "fa fa-sign-in-alt" // Default icon for unknown providers
                                         };
 
-                                        <button type="submit" class="theme-btn btn-style-one" name="provider" value="@provider.Name" title="@provider.DisplayName hesabınızla giriş yapın.">
+                                        <button type="submit" class="theme-btn btn-style-one mb-3" name="provider" value="@provider.Name" title="@provider.DisplayName hesabınızla giriş yapın.">
                                             <i class="@iconClass me-2"></i> @provider.DisplayName
                                         </button>
                                     }
