--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -167,6 +167,9 @@
             height: auto;
             object-fit: cover;
         }
+        .theme-btn{
+            cursor:pointer;
+        }
  
     </style>
 
