--- a/Areas/Identity/Pages/Account/ResetPassword.cshtml
+++ b/Areas/Identity/Pages/Account/ResetPassword.cshtml
@@ -29,7 +29,7 @@
                             <div class="form-floating mb-3">
                                 <label asp-for="Input.Email" class="form-label"></label>
                                 <span asp-validation-for="Input.Email" class="text-danger"></span>
-                                <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" placeholder="ornek@ornek.com" />
+                                <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" placeholder="ornek@ornek.com" style="min-width: 300px;"/>
                             </div>
                             <div class="form-floating mb-3">
                                 <label asp-for="Input.Password" class="form-label"></label>
