--- a/Areas/Identity/Pages/Account/ResetPassword.cshtml
+++ b/Areas/Identity/Pages/Account/ResetPassword.cshtml
@@ -17,39 +17,39 @@
 
 <section class="login-section">
     <div class="auto-container">
-        <div class="row clearfix">
-            <div class="column col-lg-6 col-md-12 col-sm-12">
-                <h1>Şifre Sıfırlama</h1>
+        <div class="row justify-content-center">
+            <div class="col-lg-6 col-md-8 col-sm-12">
+                <h1 class="text-center">Şifre Sıfırlama</h1>
                 <hr />
-                <div class="row">
-                    <div>
-                        <form method="post">
-                            <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
-                            <input asp-for="Input.Code" type="hidden" />
-                            <div class="form-floating mb-3">
-                                <label asp-for="Input.Email" class="form-label"></label>
-                                <span asp-validation-for="Input.Email" class="text-danger"></span>
-                                <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" placeholder="ornek@ornek.com" style="min-width: 300px;"/>
-                            </div>
-                            <div class="form-floating mb-3">
-                                <label asp-for="Input.Password" class="form-label"></label>
-                                <span asp-validation-for="Input.Password" class="text-danger"></span>
-                                <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" placeholder="Lütfen Şifrenizi Giriniz." />
-                            </div>
-                            <div class="form-floating mb-3">
-                                <label asp-for="Input.ConfirmPassword" class="form-label"></label>
-                                <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
-                                <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" placeholder="Lütfen Şifrenizi Doğrulayınız." />
-                            </div>
-                            <button type="submit" class="w-100 btn btn-lg btn-primary">Sıfırla</button>
-                        </form>
-                    </div>
-                </div>
+                <form method="post">
+                    <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
+                    <input asp-for="Input.Code" type="hidden" />
 
+                    <div class="form-floating mb-3">
+                        <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" placeholder="ornek@ornek.com" />
+                        <label asp-for="Input.Email" class="form-label"></label>
+                        <span asp-validation-for="Input.Email" class="text-danger"></span>
+                    </div>
+
+                    <div class="form-floating mb-3">
+                        <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" placeholder="Lütfen Şifrenizi Giriniz." />
+                        <label asp-for="Input.Password" class="form-label"></label>
+                        <span asp-validation-for="Input.Password" class="text-danger"></span>
+                    </div>
+
+                    <div class="form-floating mb-3">
+                        <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" placeholder="Lütfen Şifrenizi Doğrulayınız." />
+                        <label asp-for="Input.ConfirmPassword" class="form-label"></label>
+                        <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
+                    </div>
+
+                    <button type="submit" class="w-100 btn btn-lg btn-primary">Sıfırla</button>
+                </form>
             </div>
-         </div>
+        </div>
     </div>
 </section>
+
 @section AdditionalScripts {
     <partial name="_ValidationScriptsPartial" />
 }
