--- a/Views/Order/CheckOut.cshtml
+++ b/Views/Order/CheckOut.cshtml
@@ -39,9 +39,12 @@
                 margin-top: 50px;
                 margin-left: 20px;
             }
+             #billing-address-div {
+                 margin-top: 50px;
+                margin-left: 20px;
+            }
         }
-    </style>
-}
+
 
 <!--CheckOut Page-->
 <div class="checkout-page">
