--- a/Views/Payment/Index.cshtml
+++ b/Views/Payment/Index.cshtml
@@ -121,6 +121,14 @@
             max-width: 100%; 
             word-break: break-word;
         }
+
+	
+	 @@media (min-width: 992px) { 
+            .credit-card-info {
+                margin-top: 50px;
+                margin-left: 20px;
+            }
+        }
     </style>
 
 }
