--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -365,7 +365,8 @@
                                         </div>
                                         <div class="text">
                                             Birileri Dış Ticaret  olarak, uluslararası kalite standartlarına uygun şekilde ithalat gerçekleştiriyoruz.
-                                            Müşteri memnuniyetini ön planda tutarak, şeffaf, güvenilir ve sürdürülebilir ticaret ilkeleriyle faaliyet gösteriyoruz.
+                                            Müşteri memnuniyetini ön planda tutarak, şeffaf, güvenilir ve sürdürülebilir ticaret ilkeleriyle faaliyet gösteriyoruz.</br>
+                                            Mersis No: 0177070525100001
                                         </div>
                                     </div>
                                 </div>
