--- a/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
@@ -27,7 +27,7 @@
                 <h3>@ViewData["Title"]</h3>
 
                 <div class="row">
-                    <div >
+                    <div class="ml-1">
                         <p>Bu Sayfa Bizimle Paylaştığınız Bilgileri İçerir. Bu Sayfa Verilerinizi İndirmenizi ya da Silmenizi Sağlar.</p>
                         <p>
                             <strong>Hesabınızı silmek tüm verilerinizi kaybetmenize neden olur.</strong>
