--- a/Areas/Identity/Pages/Account/Manage/Email.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/Email.cshtml
@@ -28,7 +28,7 @@
                             <div asp-validation-summary="All" class="text-danger" role="alert"></div>
                             @if (Model.IsEmailConfirmed)
                             {
-                                <div class="form-floating mb-3 input-group">
+                                <div class="form-floating mb-3 pl-1 input-group">
                                     <div class="mb-2">
                                         <label asp-for="Email" class="form-label w-100 fw-bold" style="display: block;">Email</label>
                                     </div>
@@ -50,7 +50,7 @@
                                     <button id="email-verification" type="submit" asp-page-handler="SendVerificationEmail" class="btn btn-link">Doğrulama Maili Gönder</button>
                                 </div>
                             }
-                            <div class="form-floating mb-3">
+                            <div class="form-floating mb-3 pl-1">
                                 <label asp-for="Input.NewEmail" class="form-label"></label>
                                 <input asp-for="Input.NewEmail" class="form-control" autocomplete="email" aria-required="true" placeholder="Lütfen yeni mailinizi giriniz." />
                                 <span asp-validation-for="Input.NewEmail" class="text-danger"></span>
