--- a/Views/Order/CheckOut.cshtml
+++ b/Views/Order/CheckOut.cshtml
@@ -15,11 +15,11 @@
 }
 @section CSS{
     <style>
-        .theme-btn, .order-btn {
+        #proceed-to-payment {
             display: inline-block;
             padding: 10px 20px;
-            background-color: #007bff; /* Blue background */
-            color: #fff; /* White text */
+            background-color: #FFB22F; /* Blue background */
+            color: #000; /* White text */
             text-decoration: none; /* Remove underline */
             border: none;
             border-radius: 4px;
@@ -30,11 +30,12 @@
             transition: background-color 0.3s ease;
         }
         
-        .theme-btn:hover, .order-btn:hover {
-            background-color: #0056b3; /* Darker on hover */
+            #proceed-to-payment:hover {
+            background-color: #D99E00;
+            color: #000; /* Darker on hover */
         }
 
-        @@media (min-width: 992px) { 
+        @@media (min-width: 780px) { 
             #is-corporate-main-div {
                 margin-top: 50px;
                 margin-left: 20px;
