--- a/Views/Order/CheckOut.cshtml
+++ b/Views/Order/CheckOut.cshtml
@@ -36,13 +36,18 @@
         }
 
         @@media (min-width: 780px) { 
-            #is-corporate-main-div {
-                margin-top: 50px;
-                margin-left: 20px;
+
+
+            #billing-address-div {
+                padding-top: 20px;
+                padding-left: 10px;
             }
+        }
+        @@media (min-width: 780px) { 
+
              #billing-address-div {
-                 margin-top: 50px;
-                margin-left: 20px;
+                 padding-top: 20px;
+                padding-left: 10px;
             }
         }
     </style>
