--- a/Views/Shared/_PartialProductCard.cshtml
+++ b/Views/Shared/_PartialProductCard.cshtml
@@ -35,7 +35,7 @@
             <div class="shop-item col-lg-4 col-md-6 col-sm-12">
                 <div class="inner-box">
                     <div class="image">
-                        <img loading="lazy" src="@Url.Content(string.Format("~/images/resource/products/{0}/1.jpg", item.ProductCode))" alt="@item.ProductName" />
+                        <img loading="lazy" src="@Url.Content(string.Format("/images/resource/products/{0}/1.jpg", item.ProductCode))" alt="@item.ProductName" />
                         <div class="overlay-box">
                             <ul class="cart-option">
                                 <li><a asp-controller="Shop" asp-action="ProductDetailed" asp-route-productCode="@item.ProductCode"><span class="fa fa-link"></span></a></li>
