--- a/Views/Payment/Index.cshtml
+++ b/Views/Payment/Index.cshtml
@@ -522,8 +522,9 @@
                                         win.document.close();
 
                                 } else {
-                                    showAlert(button, "Ödeme başarıyla gerçekleşti!", "success");
-                                    window.location.href = "/Home"; // Redirect to confirmation page
+                                   	window.location.href = "/Identity/Account/Manage"; 
+					window.location.href = "/Payment/RedirectWithSuccess";
+				  
                                 }
                             } else {
 
