--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -30,7 +30,7 @@
             <!--image Column-->
             <div class="image-column col-lg-5 col-md-12 col-sm-12">
                 <div class="image">
-                    <img loading="lazy" src="~/images/resource/image-3.avif" alt="about" />
+                    <img loading="lazy" src="/images/resource/image-3.avif" alt="about" />
                 </div>
             </div>
 
@@ -54,7 +54,7 @@
             </div>
         </div>
         <!--Form Column-->
-        <div class="form-column" style="background-image:url('@Url.Content("~/images/background/6.jpg")');">
+        <div class="form-column" style="background-image:url('@Url.Content("/images/background/6.jpg")');">
             <div class="inner-column">
                 <div class="subscribe-form-three">
                     <form method="post" action="https://expert-themes.com/html/global-industry/contact.html">
