product variant and image views improved

--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -44,7 +44,7 @@
 <section class="fluid-section-one">
     <div class="outer-container clearfix">
         <!--Title Column-->
-        <div class="title-column" style="background-image:url(images/background/11.jpg);">
+        <div class="title-column" style="background-image:url('@Url.Content("~/images/background/11.jpg")');">
             <div class="inner-column">
                 <div class="icon-box">
                     <span class="icon flaticon-envelope-2"></span>
@@ -54,7 +54,7 @@
             </div>
         </div>
         <!--Form Column-->
-        <div class="form-column" style="background-image:url('@Url.Content("/images/background/6.jpg")');">
+        <div class="form-column" style="background-image:url('@Url.Content("~/images/background/6.jpg")');">
             <div class="inner-column">
                 <div class="subscribe-form-three">
                     <form method="post" action="https://expert-themes.com/html/global-industry/contact.html">
