--- a/Views/Shared/_PartialEcommerceService.cshtml
+++ b/Views/Shared/_PartialEcommerceService.cshtml
@@ -1,5 +1,5 @@
 ﻿<section class="product-section">
-    <div class="upper-box" style="background-image:url(images/background/1.jpg)">
+    <div class="upper-box" style="background-image:url('@Url.Content("~/images/background/1.jpg")');">
         <div class="auto-container">
             <h2>
                 Markanız İçin <span class="theme_color">Özel Çözümler</span> Sunuyoruz!
@@ -14,7 +14,7 @@
                 <!-- Image Column -->
                 <div class="image-column col-lg-6 col-md-12 col-sm-12">
                     <div class="image">
-                        <img src="~/images/resource/image-1.avif" loading="lazy" alt="Hizmetlerimiz" />
+                        <img src="/images/resource/image-1.avif" loading="lazy" alt="Hizmetlerimiz" />
                     </div>
                 </div>
                 <!-- Content Column -->
